Agregar deployment_avanzado. Modificar pod_avanzado

--- a/04_ejercicio_pod_avanzado/pod_avanzado.yaml
+++ b/04_ejercicio_pod_avanzado/pod_avanzado.yaml
@@ -6,6 +6,8 @@ spec:
   containers:
   - name: nginx
     image: nginx:alpine
+    command: ["nginx"]
+    args: ["-g", "daemon off;"]
     env:
     - name: MI_VARIABLE
       value: "valor1"
