--- a/08_reverse_proxy_con_docker/docker-compose.yml
+++ b/08_reverse_proxy_con_docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+version: "3.7"
 
 services:
   grafana: 
@@ -12,6 +12,9 @@ services:
     image: "nginx:1.23.0"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - grafana
+      - wiki
     ports:
       - "8081:80"
 
